--- a/views/dgt_os_form_view.xml
+++ b/views/dgt_os_form_view.xml
@@ -79,6 +79,13 @@
                    
                     <field name="contrato"  attrs="{'readonly':[('state','!=', 'draft')]}" />
                 </xpath>
+                <!-- Inherit Form view -->
+	
+				<xpath expr="//field[@name='maintenance_type']" position="after">		
+                     <field name="maintenance_grupo_instrucao"  widget="many2many_tags" 
+                     attrs="{'readonly':[('state','=', 'done')],'required':[('maintenance_type','=','preventive')], 'invisible':[('maintenance_type','!=','preventive')]}"/>	
+    			</xpath>
+			
             </field>
         </record>
                                 
