--- a/reports/report_cronograma_preventiva_template.xml
+++ b/reports/report_cronograma_preventiva_template.xml
@@ -6,13 +6,13 @@
 				<t t-call="web.external_layout">
 					<div class="page">
 						<div class="oe_structure"/>
-						<div class="row">
+						<div class="row col-12">
 							<h2>
 								<span t-field="o.name"/>
 							</h2>
 							
 						</div>
-						<div class="row">
+						<div class="row col-8">
 						<p>
 								<span t-field="o.description"/>
 							</p>
@@ -26,16 +26,15 @@
 						
 
 						<t t-foreach="meses" t-as="num_mes">
-							<div class="row">
-								<h3 style="margin-top:50px">
-									<t t-log="num_mes"/>
-									<t t-esc="o.meses_nome[num_mes-1]"/>
-								</h3>
-							</div>
-							<div class="row" style="page-break-before: avoid;">
-								<table class="table table-condensed table-bordered" style="page-break-after: always;">
+													
+								<table class="table table-condensed table-bordered" >
 									<thead>
-										
+										<tr style="background-color:#EAEAEA">
+											<th  colspan="99" ><h3  >
+												<t t-log="num_mes"/>
+												<t t-esc="o.meses_nome[num_mes-1]"/>
+											</h3></th>
+										</tr>
 										<tr>
 											<th rowspan="2">Equipamentos</th>
 											<t t-set="s" t-value="1"/>
@@ -59,23 +58,28 @@
 										</tr>
 									</thead>
 									<tbody>
+									
 										<t t-foreach="o.report_get_preventivas(ano,num_mes)" t-as="preventiva">
+
 											<tr>
+								
 												<td>
 													<t t-esc="preventiva.equipment.name"/>-NS:<t t-esc="preventiva.equipment.serial_number"/>
 												</td>
 												<t t-foreach="o.cal.itermonthdays(ano,num_mes)" t-as="dia">
-													<t t-if="dia == preventiva.data_programada.day">
+													
 														
 														
 														<t t-if="dia == preventiva.data_programada.day">
-															<td class="active">
+															<td style="background-color:#EAEAEA">
 																<t t-esc="dia"/>
 															</td>
 														</t>
 														<t t-if="dia != preventiva.data_programada.day">
 															<td>
-																
+																<t t-if="dia">
+																	<t t-esc="dia"/>
+																</t>
 															</td>
 
 														</t> 
@@ -83,7 +87,7 @@
 														
 
 														
-													</t>
+													
 												</t>
 
 											</tr>
@@ -93,7 +97,7 @@
 
 									</tbody>
 								</table>
-							</div>
+							
 							<t t-set="i" t-value="i+1"/>
 						</t>
 
