--- a/views/dgt_preventiva_contratos.xml
+++ b/views/dgt_preventiva_contratos.xml
@@ -52,6 +52,12 @@
             </notebook>
 
           </sheet>
+          <div class="o_attachment_preview" options="{types: ['image', 'pdf'], 'order': 'desc'}" />
+					<div class="oe_chatter">
+						<field name="activity_ids" widget="mail_activity" />
+						<field name="message_follower_ids" widget="mail_followers" />
+						<field name="message_ids" widget="mail_thread" />
+					</div>
         </form>
       </field>
     </record>
