--- a/reports/report_preventiva_template.xml
+++ b/reports/report_preventiva_template.xml
@@ -321,7 +321,7 @@
 										<p>
 										<span t-field="picture.description" />
 										</p>
-										<img t-attf-src="data:image/png;base64,{{ picture.picture }}" style="max-height:280mm" />
+										<img t-attf-src="data:image/png;base64,{{ picture.picture }}"  style="max-height:280mm; max-width:250mm" />
 									</div>
 									<t t-set="number_foto" t-value="number_foto+1" />
 								</t>						
