--- a/views/dgt_preventiva_contratos.xml
+++ b/views/dgt_preventiva_contratos.xml
@@ -25,6 +25,8 @@
               <group>
                 <field name="data_inicio"/>
                 <field name="data_fim"/>
+
+                <field name="type_contract" widget="radio"/>
                 <field name="pecas_inclusas" widget="radio"/>
                 <field name="analytic_account_id" string="Conta Analítica"/>
                 <field name="fiscal_position_id"  string= "Posição Fiscal de Peças" />
