--- a/views/dgt_os_form_view.xml
+++ b/views/dgt_os_form_view.xml
@@ -38,6 +38,7 @@
                         <tree string="Pecas" decoration-success="aplicada==True" decoration-danger="aplicada==False" editable="bottom" >
                         <!--    <field name="sequence" widget="handle"/> -->
                             <field name="aplicada"/>
+                            <field name="not_aproved"/>
                             <field name="product_id"/>
                           <!--   <field name='name'/> -->
                             <field name="lot_id" domain="[('product_id', '=', product_id)]" context="{'default_product_id': product_id}" groups="stock.group_production_lot"/>
@@ -46,7 +47,7 @@
                           <!--   <field name="peca_autorizada" readonly="True" /> -->
                             <field name="product_uom_qty" string="Qtd Ped"/>
                             <field name="product_uom" string="Unit of Measure" groups="product.group_uom"/>
-                            <field name='relatorio_parts_id'/>
+                            <field name='relatorio_parts_id' invisible="1"/>
                             <field name='relatorio_request_id'/>
                             
                         </tree>
